<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/montserrat_subrayada"
        android:textSize="30sp"
        style="@style/textView"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:textAlignment="textStart"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageViewDress"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="TODO"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewDress"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/add_dress_border"
                android:entries="@array/type"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputViewMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/account_circle_48px2">

                <EditText
                    android:id="@+id/editTextBrand"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/add_dress_border"
                    android:fontFamily="@font/inter_semibold"
                    android:hint="@string/brand"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textStyle="bold|italic"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputViewModello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputViewMarca"
                android:layout_centerHorizontal="true"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/account_circle_48px2">

                <EditText
                    android:id="@+id/editTextTemplate"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/add_dress_border"
                    android:fontFamily="@font/inter_semibold"
                    android:hint="@string/template"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textColorHint="@color/black"
                    android:textStyle="bold|italic"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputViewColore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputViewModello"
                android:layout_centerHorizontal="true"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/account_circle_48px2">

                <EditText
                    android:id="@+id/editTextColor"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/add_dress_border"
                    android:fontFamily="@font/inter_semibold"
                    android:hint="@string/color"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textColorHint="@color/black"
                    android:textStyle="bold|italic"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputViewDescrizione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputViewColore"
                android:layout_centerHorizontal="true"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/account_circle_48px2">

                <EditText
                    android:id="@+id/editTextDescriprion"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/add_dress_border"
                    android:fontFamily="@font/inter_semibold"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textColorHint="@color/black"
                    android:textStyle="bold|italic"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputViewDescrizione"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_button"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>